# jupyter-ai-nrp

./: NOTICE  pyproject.toml
jupyter_ai_nrp/: provider.py
